--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -71,5 +71,7 @@ flutter {
 }
 
 dependencies {
+    implementation("com.google.firebase:firebase-analytics")
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
 }
+
