--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,15 +30,14 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-
-
-  # The following adds the Cupertino Icons font to your application.
-  # Use with the CupertinoIcons class for iOS style icons.
+  material_design_icons_flutter: ^5.0.0
   cupertino_icons: ^1.0.2
   firebase_auth: ^4.14.0
   firebase_core: ^2.22.0
   get: ^4.6.5
   cloud_firestore: ^4.13.2
+  intl: ^0.19.0
+  emoji_picker_flutter: ^1.6.3
   
 
 
@@ -62,10 +61,10 @@ flutter:
   # The following line ensures that the Material Icons font is
   # included with your application, so that you can use the icons in
   # the material Icons class.
-  #uses-material-design: true
+  uses-material-design: true
 
-  # To add assets to your application, add an assets section, like this:
-   assets:
+
+  assets:
    - assets/img/
   
   #   - images/a_dot_burr.jpeg
